--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -261,6 +261,22 @@ img{
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
+/* Test */
+.social-test-sprite{
+  width: 60px;
+  height: 60px;
+  outline: 1px solid red;
+  background-color: teal;
+}
+.svg-twitter{
+  width: 40px;
+  height: 40px;
+  fill: black;
+  stroke: #2196F3;
+
+}
+
 /* Customers */
 .flex-customers{
   display: flex;
