--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -108,10 +108,12 @@ img{
 }
 .link-current{
   color: var(--Iris);
+  border-bottom: 3px solid var(--Ocean);
+  border-radius: 2px;
 }
 .line {
   border-bottom: 1px solid #E7E9FC;
-  /* box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 /* Hero */
 .section-hero {
@@ -444,6 +446,7 @@ img{
   padding-left: 16px;
   padding-top: 20px;
   padding-bottom: 20px;
+  border: 0.5px solid #F4F4FD;
 }
 .title-card{
   font-weight: 500;
@@ -459,15 +462,18 @@ img{
 }
 .examples-item{
   margin-bottom: 48px;
-  /* outline: 1px dashed teal; */
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   background: #FFF;
   width: calc((100% - 2 * 24px)/3);
 }
-.examples-item:hover{
-  border: 0.5px solid #F4F4FD;
+.link-examples {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  display: block;
+}
+
+.link-examples:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .examples-item:nth-last-child(-n+3){
   margin-bottom: 0px;
 }
+
