--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -435,7 +435,7 @@ img{
   color: white;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
-  border: var(--CLOUD)
+  border: var(--CLOUD);
 }
 /* Examples */
 .flex-examples{
